# classplanner-rust-backend

./: .gitignore  Cargo.toml  README.md  justfile
src/: consts.rs  db.rs  helper.rs  main.rs
src/databases/: ciphered_database.rs  cp_database.rs  database.rs  encrypted_database.rs  mod.rs  mongo_database.rs
src/databases/interfaces/: api_interface.rs  ciphered_api_interface.rs  encrypted_api_interface.rs  mod.rs
src/encryption/: decrypt.rs  encrypt.rs
src/endpoints/: exam.rs  mod.rs  student.rs
src/models/: mod.rs  student.rs
src/models/exams/: encrypted_exam_in.rs  encrypted_exam_out.rs  exam.rs  exam_in.rs  exam_out.rs  grading_scale.rs  mod.rs  percent.rs
src/models/students/: encrypted_student_in.rs  encrypted_student_out.rs  mod.rs  score.rs  student_in.rs  student_out.rs
tests/: api.http  api_exams.http  api_students.http
