[package]
name = "classplanner-rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
mongodb = "2.7.1"
dotenv = "0.15.0"
axum = "0.6.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.4", features = ["cors", "trace"]}
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
serde_json = "1.0.111"
